# jm-tauri

./: .gitignore  LICENSE  README.md
.github/workflows/: build-release.yml  manual-tag-release.yml
doc/: android-apk.md  backend-domain-switch.md  dev.md  sr.md
jm/: jm-release.keystore  package-lock.json  package.json  pnpm-lock.yaml
jm/scripts/: build-apk-dev.cjs  bump-version.cjs
jm/src/: App.tsx
jm/src-tauri/: Cargo.toml  keystore.properties  tauri.conf.json
jm/src-tauri/icons/: icon.icns
jm/src-tauri/src/: lib.rs  main.rs
jm/src/auth/: errors.ts  session.ts
jm/src/components/: Button.tsx  CoverImage.tsx  ListViewToggle.tsx  Loading.tsx  SideNav.tsx  Toast.tsx
jm/src/config/: endpoints.ts
jm/src/pages/: CategoryRankPage.tsx  ComicDetailPage.tsx  FavoritesPage.tsx  HistoryPage.tsx  HomePage.tsx  LocalFavoritesPage.tsx  LoginPage.tsx  ReadingPage.tsx  ReadingPageMenu.tsx  ReadingPullContainer.tsx  SearchPage.tsx  SettingsPage.tsx
jm/src/reading/: descramble.ts  progress.ts
jm/src/settings/: userSettings.ts
