[package]
name = "jm"
version = "0.1.25"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "socks"] }
base64 = "0.22"
md5 = "0.7"
aes = "0.8"
ecb = "0.1"
cipher = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
urlencoding = "2"
sled = "0.34"
bincode = "1.3"
tokio = { version = "1", features = ["sync", "time"] }
zip = "0.6"
